5. Prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:  prometheus-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - prometheus.vaayadi.in
    secretName: prometheus.vaayadi.in
  rules:
  - host: prometheus.vaayadi.in
    http:
      paths:
      - backend:
          serviceName: prometheus-1570609135-server
          servicePort: 80
